test(http): fix file content write method in file upload test.